[tool]

[tool.poetry]
name = "bricks"
version = "0.0.1"
description = "Bricks Project"
authors = ["David Dahan <david.dahan3@gmail.com>"]

[tool.poetry.dependencies]

##########################################################################################
# Main
##########################################################################################
python = "3.12.0"
Django = "4.*"       # https://github.com/django/django
django-environ = "*" # https://github.com/joke2k/django-environ


##########################################################################################
# Database
##########################################################################################
dj-database-url = "*" # https://github.com/jazzband/dj-database-url
psycopg = { extras = [
    "binary",
], version = "*" } # https://github.com/psycopg/psycopg


##########################################################################################
# Misc
##########################################################################################
django-cors-headers = "*" # https://github.com/adamchainz/django-cors-headers
gunicorn = "*"            # https://github.com/benoitc/gunicorn
ruff = "*"                # https://github.com/charliermarsh/ruff
ipdb = "*"                # https://github.com/gotcha/ipdb

[tool.black]
target-version = ["py312"]

[tool.ruff]
line-length = 90
target-version = "py312"
extend-exclude = ["migrations", "__pycache__"]
per-file-ignores = {}

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "local-folder",
]
[tool.ruff.isort.sections]
"django" = ["django"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
